--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".DeleteView"/>
+        <activity android:name=".IpAddressView"/>
+        <activity android:name=".GPSActivity"/>
+        <activity android:name=".ActivityRedPixelDetector"/>
     </application>
 
 </manifest>
