added new home page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".GPSActivity"/>
         <activity android:name=".ActivityRedPixelDetector"/>
         <activity android:name=".IpAddressActivity"/>
+        <activity android:name=".CameraViewActivity"/>
 
     </application>
 
